--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 
 	<section>
     <h2 id="jsprojectdes">Music Trivia Application</h2>
-		<img class="portPic" src="portfolio.png" alt="picture of quizapp">
+		<img class="portPic" src="images/wall.png" alt="picture of quizapp">
     <div id="projectSpan">
       <span>Test your musical trivia knowledge with this web app made with javascript</span>
-    </div>
-    <div class="center">
-      <div class="button_cont" align="center"><a class="example_c" href="add-website-here" target="_blank" rel="nofollow noopener">Github Repo</a></div>
-      <div class="button_cont" align="center"><a class="example_c" href="add-website-here" target="_blank" rel="nofollow noopener">Live Site</a></div>
-    </div>
+		</div>
+		<div class='center'>
+    	<div class="button_cont" align="center"><a class="example_c" href="https://github.com/gschembri/quizgit" target="_blank" rel="nofollow noopener">Github Repo</a></div>
+			<div class="button_cont" align="center"><a class="example_c" href="http://127.0.0.1:5500/" target="_blank" rel="nofollow noopener">Live Site</a></div>
+		</div>
 	</section>
 
 	<section>
