--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>
 		<div class='center'>
     	<div class="button_cont" align="center"><a class="example_c" href="https://github.com/gschembri/quizgit" target="_blank" rel="nofollow noopener">Github Repo</a></div>
-			<div class="button_cont" align="center"><a class="example_c" href="http://127.0.0.1:5500/" target="_blank" rel="nofollow noopener">Live Site</a></div>
+			<div class="button_cont" align="center"><a class="example_c" href="https://thinkful-quiz-appcase-red--gabrielschembri.repl.co/" target="_blank" rel="nofollow noopener">Live Site</a></div>
 		</div>
 	</section>
 
