--- a/index.html
+++ b/index.html
@@ -6,57 +6,52 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
 </head>
 
 <body>
 	<nav role="navigationBar">
-		<h1 id="title">Gabriel Schembri</h1>
-		<ul class="links">
-			<li>About</li>
-			<li>Portfilio</li>
-			<li>Contact</li>
-		</ul>
+		<span id="title"><a id="name" href="https://github.com/gschem">gschem</a></span>
 	</nav>
-	<!-- <header role="banner">
-		
-	</header> -->
 
-	
-	<h2 id="header">Denver based Web Developer in training</h2>
-	
-	<section class="aboutSec">
-		<div id="about">
-			<p id="aboutDef">Since I was 10 I’ve spent most of my time online whether for entertainment or schoolwork, and after an
-				investigative mission into freecodecamp with my friends, have realized I love Web Development! When I’m not coding you’ll
-				find me at concerts, trying to find the best Vietnamese spot in town, or playing music.
-			</p>
-		</div>
+	<span class='about'>
+		<h2 class="header">My name is Gabriel</h2>
+		<p class="header">Here's some stuff I've worked on</p>
+	</span>
+	<section>
+    	<h2 id="jsprojectdes">Music Trivia Application</h2>
+			<img class="portPic" src="images/wall.png" alt="picture of quizapp">
+			<div class='center'>
+    			<div class="button_cont" align="center"><a class="example_c" href="https://github.com/gschem/quizgit" target="_blank" rel="nofollow noopener">Github Repo</a></div> 
+				<div class="button_cont" align="center"><a class="example_c" href="https://thinkful-quiz-appcase-red--gabrielschembri.repl.co/" target="_blank" rel="nofollow noopener">Live Site</a></div>
+			</div>
 	</section>
 
 	<section>
-    <h2 id="jsprojectdes">Music Trivia Application</h2>
-		<img class="portPic" src="images/wall.png" alt="picture of quizapp">
-    <div id="projectSpan">
-      <span>Test your musical trivia knowledge with this web app made with javascript</span>
-		</div>
-		<div class='center'>
-    	<div class="button_cont" align="center"><a class="example_c" href="https://github.com/gschembri/quizgit" target="_blank" rel="nofollow noopener">Github Repo</a></div>
-			<div class="button_cont" align="center"><a class="example_c" href="https://thinkful-quiz-appcase-red--gabrielschembri.repl.co/" target="_blank" rel="nofollow noopener">Live Site</a></div>
-		</div>
+		<h2 id="jsprojectdes">Music Trivia Application</h2>
+			<img class="portPic port2" src="images/shopapp.png" alt="picture of shopapp">
+			<div class='center'> 
+				<div class="button_cont" align="center"><a class="example_c" href="https://repl.it/@GabrielSchembri/jquery-shopping-list-walkthrough-v2-13" target="_blank" rel="nofollow noopener">Test it Out!</a></div>
+			</div>
 	</section>
 
 	<section>
-    <p>Contact</p>
-		<span id="contactSpan">
-      <a href="https://github.com/gschembri" target="_blank"><button style="font-size:24px"  class="button1"> <i class="fa fa-github"></i></button></a>
-      <a href="https://www.linkedin.com/in/gabriel-schembri-701a54172/" target="_blank"  class="button1"><button style="font-size:24px"> <i class="fa fa-linkedin-square"></i></button></a>
-      <a href="mailto:gabriel.schembri1@gmail.com" target="_blank"><button style="font-size:24px"  class="button1"><i class="fa fa-envelope"></i></button></a>
-    </span>
+		<h2 id="jsprojectdes">A real live fizzbuzz</h2>
+			<img class="portPic port3" src="images/fizzbuzz.png" alt="picture of fizzbuzz app">
+			<div class='center'> 
+				<div class="button_cont" align="center"><a class="example_c" href="https://repl.it/@GabrielSchembri/return-of-fizz-buzz" rel="nofollow noopener">Catch the Excitement</a></div>
+			</div>
 	</section>
+
 	</main>
-	<footer role="content-info"></footer>
+	<footer role="content-info">
+		<span id="contactSpan">
+			<a href="https://github.com/gschem" target="_blank"><button style="font-size:24px"  class="button1"> <i class="fa fa-github"></i></button></a>
+			<a href="https://www.linkedin.com/in/gabriel-schembri-701a54172/" target="_blank"  class="button1"><button style="font-size:24px"> <i class="fa fa-linkedin-square"></i></button></a>
+			<a href="mailto:gabriel.schembri1@gmail.com" target="_blank"><button style="font-size:24px"  class="button1"><i class="fa fa-envelope"></i></button></a>
+		</span>
+	</footer>
 </body>
 
 </html>
