--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</section>
 
 	<section>
-		<h2 id="jsprojectdes">Music Trivia Application</h2>
+		<h2 id="jsprojectdes">Shopping List Application</h2>
 			<img class="portPic port2" src="images/shopapp.png" alt="picture of shopapp">
 			<div class='center'> 
 				<div class="button_cont" align="center"><a class="example_c" href="https://repl.it/@GabrielSchembri/jquery-shopping-list-walkthrough-v2-13" target="_blank" rel="nofollow noopener">Test it Out!</a></div>
